--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>NBA中国官方网站</title>
-		<link rel="shortcut icon" href="https://mat1.gtimg.com/chinanba/images/favicon.ico">
+		<link rel="shortcut icon" href="images/icon.ico">
 		<link rel="stylesheet" type="text/css" href="css/nav.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 
@@ -245,6 +245,223 @@
 									</a>
 								</li>
 							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="content-message">
+					<div class="message-left">
+						<div class="message-left-title">
+							<div class="new-message">
+								<h2><a href="">最新资讯</a></h2>
+							</div>
+							<div class="add-team">
+								<a href=""><span>添加主队</span></a>
+							</div>
+						</div>
+						<div class="message-change">
+							<a href=""><span class="title-change">换一换</span></a>
+						</div>
+						<div class="message-images">
+							<div class="top-images">
+								<div >
+									<a href="">
+										<img src="images/message1.jpg">
+										<span class="top-left"> 自由市场签约汇总 杜兰特欧文齐聚篮网</span>
+									</a>
+								</div>
+								<div>
+									<a href="">
+										<img src="images/message2.jpg">
+										<span class="top-right">诺威尔20分5篮板 湖人送勇士夏联两连败</span>
+									</a>
+								</div>
+							</div>
+							<div class="bottom-images">
+								<div class="small-images">
+									<a href="">
+										<div class="small-show"><img src="images/message3.jpg"></div>
+										<div class="small-text">
+											<span class="small-title">高清-3日夏季联赛精彩瞬间</span>
+											<span class="small-icon">2019-07-03 09:29</span>
+										</div>
+									</a>
+								</div>
+								<div class="small-images">
+									<a href="">
+										<div class="small-show"><img src="images/message4.jpg"></div>
+										<div class="small-text">
+											<span class="small-title">曝爵士一年合同签下前乐透秀穆迪埃</span>
+											<span class="small-icon">2019-07-03 09:28</span>
+										</div>
+									</a>
+								</div>
+								<div class="small-images">
+									<a href="">
+										<div class="small-show"><img src="images/message5.jpg"></div>
+										<div class="small-text">
+											<span class="small-title">曝篮网一年260万美元签下威尔森-钱德勒</span>
+											<span class="small-icon">2019-07-03 09:16</span>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<a class="more-message"><span>更多资讯</span></a>
+					</div>
+					<div class="message-right">
+						<div class="ranking-button">
+							<div class="ranking-top">
+								<div class="top-east">
+									<a href=""><span>联盟&nbsp;排名</span></a>
+								</div>
+								<div class="top-west">
+									<a href=""><span>分区&nbsp;排名</span></a>
+								</div>
+							</div>
+							<div class="ranking-bottom">
+								<div class="bottom-east">
+									<a href="">
+										<img src="images/east.png">
+										<span>东部联盟</span>
+									</a>
+								</div>
+								<div class="bottom-west">
+									<a href="">
+										<img src="images/west.png">
+										<span>西部联盟</span>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="ranking-content">
+							<table cellspacing="0" class="ranking-data">
+								<th>排名</th>
+								<th>&nbsp;</th>
+								<th>姓名</th>
+								<th>胜</th>
+								<th>负</th>
+								<th>胜场差</th>
+								<tr>
+									<td>01</td>
+									<td><img src="images/logo1.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>e&nbsp;-&nbsp;雄鹿</span></a></td>
+									<td>60</td>
+									<td>22</td>
+									<td>0</td>
+								</tr>
+								<tr>
+									<td>02</td>
+									<td><img src="images/logo2.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>a&nbsp;-&nbsp;猛龙</span></a></td>
+									<td>58</td>
+									<td>24</td>
+									<td>2</td>
+								</tr>
+								<tr>
+									<td>03</td>
+									<td><img src="images/logo3.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>x&nbsp;-&nbsp;76人</span></a></td>
+									<td>51</td>
+									<td>31</td>
+									<td>9</td>
+								</tr>
+								<tr>
+									<td>04</td>
+									<td><img src="images/logo4.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>x&nbsp;-&nbsp;凯尔特人</span></a></td>
+									<td>49</td>
+									<td>33</td>
+									<td>11</td>
+								</tr>
+								<tr>
+									<td>05</td>
+									<td><img src="images/logo5.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>x&nbsp;-&nbsp;步行者</span></a></td>
+									<td>48</td>
+									<td>34</td>
+									<td>12</td>
+								</tr>
+								<tr>
+									<td>06</td>
+									<td><img src="images/logo6.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>x&nbsp;-&nbsp;篮网</span></a></td>
+									<td>42</td>
+									<td>40</td>
+									<td>18</td>
+								</tr>
+								<tr>
+									<td>07</td>
+									<td><img src="images/logo7.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>se&nbsp;-&nbsp;魔术</span></a></td>
+									<td>42</td>
+									<td>40</td>
+									<td>18</td>
+								</tr>
+								<tr>
+									<td>08</td>
+									<td><img src="images/logo8.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>x&nbsp;-&nbsp;活塞</span></a></td>
+									<td>41</td>
+									<td>41</td>
+									<td>19</td>
+								</tr>
+								<tr>
+									<td>09</td>
+									<td><img src="images/logo9.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;黄蜂</span></a></td>
+									<td>39</td>
+									<td>43</td>
+									<td>21</td>
+								</tr>
+								<tr>
+									<td>10</td>
+									<td><img src="images/logo10.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;热火</span></a></td>
+									<td>39</td>
+									<td>43</td>
+									<td>21</td>
+								</tr>
+								<tr>
+									<td>11</td>
+									<td><img src="images/logo11.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;奇才</span></a></td>
+									<td>32</td>
+									<td>50</td>
+									<td>28</td>
+								</tr>
+								<tr>
+									<td>12</td>
+									<td><img src="images/logo12.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;老鹰</span></a></td>
+									<td>29</td>
+									<td>53</td>
+									<td>21</td>
+								</tr>
+								<tr>
+									<td>13</td>
+									<td><img src="images/logo13.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;公牛</span></a></td>
+									<td>22</td>
+									<td>60</td>
+									<td>38</td>
+								</tr>
+								<tr>
+									<td>14</td>
+									<td><img src="images/logo14.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;骑士</span></a></td>
+									<td>19</td>
+									<td>66</td>
+									<td>41</td>
+								</tr>
+								<tr>
+									<td>15</td>
+									<td><img src="images/logo15.svg" type="image/svg+xml"></td>
+									<td><a href=""><span>o&nbsp;-&nbsp;尼克斯</span></a></td>
+									<td>17</td>
+									<td>65</td>
+									<td>43</td>
+								</tr>
+							</table>
 						</div>
 					</div>
 				</div>
