--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>新闻</title>
-		<link rel="shortcut icon" href="https://mat1.gtimg.com/chinanba/images/favicon.ico">
+		<link rel="shortcut icon" href="images/icon.ico">
 		<link rel="stylesheet" type="text/css" href="css/nav.css">
 		<link rel="stylesheet" type="text/css" href="css/news.css">
 	</head>
